# Chest_X-ray_Detection_Challenge

./: .gitignore  EDA.ipynb  README.md  hello.py  predict.py  pyproject.toml
data/: ID_to_Image_Mapping.csv  train.csv
predictions/: predictions_6.csv
src/: data_augmentation.py  model.py  model_2.py  model_FasterRCNN.py  model_YOLO.ipynb  predict.py
